try raw google analytics

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
+<html>
+<head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9N289HG8YQ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9N289HG8YQ');
+</script>
+</head>
+<body>
 <div id="root"></div>
+</body>
+</html>
